@@ -1031,8 +1031,23 @@ literal|60
 operator|*
 literal|1000L
 decl_stmt|;
+DECL|field|locks
+specifier|private
+specifier|volatile
+name|List
+argument_list|<
+name|Object
+argument_list|>
+name|locks
+init|=
+name|objectList
+argument_list|(
+literal|3
+argument_list|)
+decl_stmt|;
 DECL|field|collectionStateCache
 specifier|protected
+specifier|final
 name|Map
 argument_list|<
 name|String
@@ -1111,6 +1126,7 @@ class|class
 name|ExpiringCachedDocCollection
 block|{
 DECL|field|cached
+specifier|final
 name|DocCollection
 name|cached
 decl_stmt|;
@@ -5582,6 +5598,86 @@ return|;
 block|}
 end_function
 
+begin_comment
+comment|/**If caches are expired they are refreshed after acquiring a lock.    * use this to set the number of locks    */
+end_comment
+
+begin_function
+DECL|method|setParallelCacheRefreshes
+specifier|public
+name|void
+name|setParallelCacheRefreshes
+parameter_list|(
+name|int
+name|n
+parameter_list|)
+block|{
+name|locks
+operator|=
+name|objectList
+argument_list|(
+name|n
+argument_list|)
+expr_stmt|;
+block|}
+end_function
+
+begin_function
+DECL|method|objectList
+specifier|private
+specifier|static
+name|ArrayList
+argument_list|<
+name|Object
+argument_list|>
+name|objectList
+parameter_list|(
+name|int
+name|n
+parameter_list|)
+block|{
+name|ArrayList
+argument_list|<
+name|Object
+argument_list|>
+name|l
+init|=
+operator|new
+name|ArrayList
+argument_list|<>
+argument_list|(
+name|n
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|n
+condition|;
+name|i
+operator|++
+control|)
+name|l
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Object
+argument_list|()
+argument_list|)
+expr_stmt|;
+return|return
+name|l
+return|;
+block|}
+end_function
+
 begin_function
 DECL|method|getDocCollection
 specifier|protected
@@ -5597,51 +5693,129 @@ parameter_list|)
 throws|throws
 name|SolrException
 block|{
-name|ExpiringCachedDocCollection
-name|cachedState
+if|if
+condition|(
+name|collection
+operator|==
+literal|null
+condition|)
+return|return
+literal|null
+return|;
+name|DocCollection
+name|col
 init|=
-name|collectionStateCache
+name|getFromCache
+argument_list|(
+name|collection
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|col
 operator|!=
 literal|null
-condition|?
-name|collectionStateCache
+condition|)
+return|return
+name|col
+return|;
+name|ClusterState
+operator|.
+name|CollectionRef
+name|ref
+init|=
+name|clusterState
+operator|.
+name|getCollectionRef
+argument_list|(
+name|collection
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|ref
+operator|==
+literal|null
+condition|)
+block|{
+comment|//no such collection exists
+return|return
+literal|null
+return|;
+block|}
+if|if
+condition|(
+operator|!
+name|ref
+operator|.
+name|isLazilyLoaded
+argument_list|()
+condition|)
+block|{
+comment|//it is readily available just return it
+return|return
+name|ref
+operator|.
+name|get
+argument_list|()
+return|;
+block|}
+name|List
+name|locks
+init|=
+name|this
+operator|.
+name|locks
+decl_stmt|;
+specifier|final
+name|Object
+name|lock
+init|=
+name|locks
 operator|.
 name|get
 argument_list|(
 name|collection
+operator|.
+name|hashCode
+argument_list|()
+operator|%
+name|locks
+operator|.
+name|size
+argument_list|()
 argument_list|)
-else|:
-literal|null
 decl_stmt|;
-if|if
-condition|(
-name|cachedState
-operator|!=
-literal|null
-operator|&&
-name|cachedState
-operator|.
-name|cached
-operator|!=
-literal|null
-condition|)
+synchronized|synchronized
+init|(
+name|lock
+init|)
 block|{
-return|return
-name|cachedState
-operator|.
-name|cached
-return|;
-block|}
-name|DocCollection
+comment|//we have waited for sometime just check once again
 name|col
-init|=
-name|clusterState
-operator|.
-name|getCollectionOrNull
+operator|=
+name|getFromCache
 argument_list|(
 name|collection
 argument_list|)
-decl_stmt|;
+expr_stmt|;
+if|if
+condition|(
+name|col
+operator|!=
+literal|null
+condition|)
+return|return
+name|col
+return|;
+name|col
+operator|=
+name|ref
+operator|.
+name|get
+argument_list|()
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|col
@@ -5675,6 +5849,40 @@ argument_list|)
 expr_stmt|;
 return|return
 name|col
+return|;
+block|}
+end_function
+
+begin_function
+DECL|method|getFromCache
+specifier|private
+name|DocCollection
+name|getFromCache
+parameter_list|(
+name|String
+name|c
+parameter_list|)
+block|{
+name|ExpiringCachedDocCollection
+name|cachedState
+init|=
+name|collectionStateCache
+operator|.
+name|get
+argument_list|(
+name|c
+argument_list|)
+decl_stmt|;
+return|return
+name|cachedState
+operator|!=
+literal|null
+condition|?
+name|cachedState
+operator|.
+name|cached
+else|:
+literal|null
 return|;
 block|}
 end_function
