@@ -853,6 +853,24 @@ return|return
 name|coll
 return|;
 block|}
+DECL|method|getCollectionRef
+specifier|public
+name|CollectionRef
+name|getCollectionRef
+parameter_list|(
+name|String
+name|coll
+parameter_list|)
+block|{
+return|return
+name|collectionStates
+operator|.
+name|get
+argument_list|(
+name|coll
+argument_list|)
+return|;
+block|}
 DECL|method|getCollectionOrNull
 specifier|public
 name|DocCollection
@@ -2233,6 +2251,16 @@ parameter_list|()
 block|{
 return|return
 name|coll
+return|;
+block|}
+DECL|method|isLazilyLoaded
+specifier|public
+name|boolean
+name|isLazilyLoaded
+parameter_list|()
+block|{
+return|return
+literal|false
 return|;
 block|}
 block|}
