@@ -2703,6 +2703,17 @@ name|collName
 argument_list|)
 return|;
 block|}
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|isLazilyLoaded
+parameter_list|()
+block|{
+return|return
+literal|true
+return|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
